--- a/FinalProjectGroup020-Wi22.ipynb
+++ b/FinalProjectGroup020-Wi22.ipynb
@@ -28,10 +28,10 @@
     "# Names\n",
     "\n",
     "- Jeffrey Luu\n",
-    "- Anonymous\n",
-    "- Anonymous\n",
-    "- Anonymous\n",
-    "- Anonymous"
+    "- Serena Tang\n",
+    "- Benjamin Hofflich\n",
+    "- Faris Ashai\n",
+    "- Steven Won"
    ]
   },
   {
